# serverless

./: .gitignore  Makefile  docker-compose.yml
.aws/: config  credentials.example
.docker/cdk/: Dockerfile  requirements.txt
.docker/node/: Dockerfile
.docker/sam/: Dockerfile
.docker/terraform/: Dockerfile  requirements.txt
.github/workflows/: app-depoly-develop.yaml  app-depoly-production.yaml  app-depoly-staging.yaml  terraform-deploy-develop.yaml  terraform-deploy-production.yaml  terraform-deploy-staging.yaml  terraform-destroy-develop.yaml  terraform-destroy-production.yaml  terraform-destroy-staging.yaml  terraform-plan-common.yaml
src/api/: README.md  template.yaml
src/api/python/: Dockerfile  pyproject.toml
src/api/python/app/: config.py
src/api/python/app/models/master/: __init__.py  base.py  item.py
src/api/python/app/models/transaction/: __init__.py  base.py
src/api/python/app/routers/: __init__.py  files.py  health_check.py  item.py  items.py  logs.py
src/api/python/app/utils/: s3_helper.py
src/api/python/app/utls/: s3_helper.py
src/api/scripts/: init_local_dynamodb.sh
src/cdk/: app.py  cdk.json
src/cdk/src/: main.py
src/cdk/test/: main.test.py
src/client/: next.config.mjs  package-lock.json  package.json
src/client/app/: layout.tsx
src/client/components/: ConfirmationModal.tsx  LoadingIcon.tsx  MobileHeader.tsx  MobileSidebar.tsx  Sidebar.tsx  SidebarItem.tsx
src/client/lib/: api-endpoints.ts  axios.config.ts  env.ts
src/client/providers/: file-provider.ts
src/scripts/: init_local_dynamodb.sh
(+18 files in other folders)
